<resources>
    <string name="app_name">Dotz</string>
    <string name="action_settings">Settings</string>
    <string name="phone_number_field_hint">Enter your number</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="verify_number_description">You\'ll get a code via SMS. Carrier rates may apply.</string>
    <string name="next_string">NEXT</string>
    <string name="verify_btn_title">Verify</string>
    <string name="enter_otp_received">Sit back &amp; relax! while we verify your number.</string>
    <string name="waiting_for_otp">Enter the otp below in case, if we fail to detect the SMS automatically.</string>
    <string name="otp_field_hint">OTP</string>
    <string name="profile_prefs_file_key">com.orca.dot.PROFILE_PREF_FILE_KEY</string>
    <string name="profile_filled">PROFILE_FILLED</string>
    <string name="user_uid">USER_UID</string>
    <string name="welcome_string">Welcome to DOT</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facecut_known_string">If you know your face cut, select one</string>
    <string name="know_fct_string">Know your Facecut</string>
    <string name="done_string">Done</string>
    <string name="fct_filled">FCT_FILLED</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="action_cart">Cart</string>
    <string name="action_fav">Favorite</string>
    <string name="action_search">Search</string>
    <string name="action_layout">ListView</string>
    <string name="phone_number">phone_number_pref_key</string>
    <string name="profile_user_name">PROFILE_USER_NAME</string>

    <string-array name="fct_array">
        <item>Diamond</item>
        <item>Heart</item>
        <item>Sqaure</item>
        <item>Oval</item>
        <item>Oblong</item>
        <item>Round</item>
    </string-array>
</resources>

