<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        tools:context="com.orca.dot.auth.EnterOTP">

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/enter_otp_received"
            android:textColor="@color/text_primary_dark" />

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/waiting_for_otp"
            android:textColor="@color/text_secondary_dark"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/otp_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/otp_field_hint"
            android:inputType="phone"
            android:textColor="@color/text_primary_dark"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/waiting_spinner"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp" />

            <TextView
                android:id="@+id/countdown_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="Waiting"
                android:textColor="@color/dribbble_dark"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/verify_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="32dp"
            android:elevation="4dp"
            android:stateListAnimator="@animator/login_button_anim"
            android:text="@string/verify_btn_title"
            android:textColor="@color/text_secondary_light"
            android:background="@drawable/login_button_ripple"></Button>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>