<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:gravity="center">

        <TextView
            android:text="@string/facecut_known_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/text_primary_dark"
            android:fontFamily="sans-serif-medium"
            style="@style/TextAppearance.AppCompat.Headline" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/facecuts_spinner"></Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/divider"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:textSize="14sp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/text_secondary_dark" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/divider"></View>
        </LinearLayout>

        <Button
            android:id="@+id/know_fct_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="32dp"
            android:elevation="4dp"
            android:stateListAnimator="@animator/login_button_anim"
            android:text="@string/know_fct_string"
            android:textColor="@color/text_primary_light"
            android:background="@drawable/login_button_ripple"></Button>
    </LinearLayout>

    <Button
        android:id="@+id/done_fct_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:elevation="4dp"
        android:stateListAnimator="@animator/login_button_anim"
        android:text="@string/done_string"
        android:background="@color/primary"
        android:textColor="@color/text_primary_light"></Button>

</android.support.design.widget.CoordinatorLayout>